# work-1

./: .gitignore  README.md  handoff.md  handoff_region_context_2026-05-05.md  pyproject.toml  requirements.txt  run_anomalydino_to_work1.sh  run_heatmap_to_work1.sh  run_three_heatmap_models.sh
baselines/MVREC/: README.md
configs/baseline/: dinov2_prototype.yaml
configs/method/: auto_mask_mvrec.yaml
data/: README.md  example_manifest.csv
docs/: change_log.md  engineering_plan.md  research_plan.md
experiments/: README.md  dinov2_baselines.md
scripts/: analyze_region_context_confusion.py  build_mvtec_fs_manifest.py  build_pseudo_bbox_manifest.py  build_pseudo_mask_manifest.py  check_bbox_crop.py  check_cached_feature_baseline.py  check_dinov2_patch_heatmaps.py  check_feature_fusion.py  check_mvtec_fs_builder.py  check_mvtec_fs_unextracted.py  check_pseudo_bbox.py  check_pseudo_bbox_iou.py  check_pseudo_bbox_iou_sweep.py  check_pseudo_mask.py  check_region_context_confusion.py  check_region_context_prototype.py  dedupe_heatmap_jsonl.py  evaluate_pseudo_bbox_iou.py  extract_dinov2_features.py  extract_dinov2_patch_heatmaps.py  fuse_feature_cache.py  run_fewshot_grid.py  run_prototype_baseline.py  run_region_context_grid.py  smoke_test.py  summarize_heatmap_model_results.py  sweep_pseudo_bbox_iou.py  validate_heatmap_jsonl.py
src/lg_fdc/: __init__.py
src/lg_fdc/data/: __init__.py  episodes.py  manifest.py  mvtec_fs.py
src/lg_fdc/evaluation/: __init__.py  metrics.py
tests/: conftest.py  test_mvtec_fs_manifest.py  test_prototype_smoke.py
(+13 files in other folders)
