[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lg-fdc"
version = "0.1.0"
description = "Localization-guided few-shot industrial defect classification research code."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jack" }]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
research = [
    "numpy>=1.24",
    "pillow>=10.0",
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=0.9",
    "scikit-learn>=1.3",
    "opencv-python>=4.8",
    "tqdm>=4.66",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]